--- a/appsettings.json
+++ b/appsettings.json
@@ -1,6 +1,7 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=aspnet-Mismo-4a13da83-e9e3-459e-843f-c8bdb302b587;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=aspnet-Mismo-4a13da83-e9e3-459e-843f-c8bdb302b587;Trusted_Connection=True;MultipleActiveResultSets=true",
+    "MismoContextConnection": "Server=(localdb)\\mssqllocaldb;Database=Mismo;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
   "Logging": {
     "LogLevel": {
